kubernetes/apps/nextcloud/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:35.0.1-apache@sha256:f4e0ee28ac9e54cad6e04e148489d79a609acba86dfbff69c8f666d50f96e414
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              memory: 512Mi
              cpu: "250m"
            limits:
              memory: 4Gi
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: data
              mountPath: /var/www/html/data
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: nextcloud-app-pvc
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-data-pvc
