kubernetes/apps/nextcloud/nextcloud/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 80
  egress:
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app: postgres
    - ports:
        - port: 6379
      to:
        - podSelector:
            matchLabels:
              app: redis
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - port: 443
        - port: 80
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
